--- a/pom.xml
+++ b/pom.xml
@@ -28,14 +28,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>fluent-hc</artifactId>
-			<version>4.3.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.bidib.jbidib.org.qbang.rxtx</groupId>
-			<artifactId>rxtxcomm</artifactId>
+			<groupId>com.mfizz</groupId>
+			<artifactId>rxtx</artifactId>
 			<version>2.2</version>
 		</dependency>
 	</dependencies>
